Use NavLink on ChatPage

--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Pages/SitePage/LeftPane_Main.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Pages/SitePage/LeftPane_Main.razor
@@ -10,7 +10,7 @@
     @* @CounterPage.NavLink *@
     @WeatherForecastsPage.NavLink
     @* @SuperherosPage.NavLink *@
-    @* @ChatPage.NavLink *@
+    @ChatPage.NavLink
     <FluentNavLink Icon=@(new Icons.Regular.Size20.Question()) Href="/" Match=NavLinkMatch.All>Counter</FluentNavLink>
     <FluentNavLink Icon=@(new Icons.Regular.Size20.Question()) Href="/" Match=NavLinkMatch.All>Weather</FluentNavLink>
     <FluentNavLink Icon=@(new Icons.Regular.Size20.Question()) Href="/" Match=NavLinkMatch.All>Superheros</FluentNavLink>
