--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Chat/Pages/ChatPage.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Chat/Pages/ChatPage.razor
@@ -5,7 +5,7 @@
 {
   private static string Title => "Chat";
   public static readonly RenderFragment NavLink =
-    @<FluentNavLink Icon=@(new Icons.Regular.Size20.Home()) Href=@GetPageUrl() Match=NavLinkMatch.All>@Title</FluentNavLink>;
+    @<FluentNavLink Icon=@(new Icons.Regular.Size20.Question()) Href=@GetPageUrl() Match=NavLinkMatch.All>@Title</FluentNavLink>;
 }
 <PageTitle>TimeWarp.Architecture Chat</PageTitle>
 <StackedPage>
