--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Counter/Pages/CounterPage.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Counter/Pages/CounterPage.razor
@@ -1,6 +1,19 @@
 @namespace TimeWarp.Architecture.Pages
-@using TimeWarp.Architecture.Features.Sidebars
+
 @inherits BaseComponent
+
+@inject IJSRuntime JsRuntime
+@code {
+  private static string Title => "Counter";
+  public static readonly RenderFragment NavLink =
+    @<FluentNavLink Icon=@(new Icons.Regular.Size20.Question()) Href=@GetPageUrl() Match=NavLinkMatch.All>@Title</FluentNavLink>;
+
+  private async Task IncrementCountViaJsInterop()
+  {
+    await JsRuntime.InvokeVoidAsync("Spa.Counter.DispatchIncrementCountAction");
+  }
+}
+
 <PageTitle>Counter Page</PageTitle>
 
 <SidebarPage>
@@ -14,24 +27,18 @@
     <Counter TestId="Counter2" />
 
     <hr class="mt-4" />
-    <Text class="mt-4 block">Reset button will clear all state in the Store and return you to the home page</Text>
+    <Text class="block mt-4">Reset button will clear all state in the Store and return you to the home page</Text>
     <FluentButton Appearance=Appearance.Accent Id=@Id data-qa=@TestId OnClick=ResetButtonClick>Reset Store</FluentButton>
 
     <hr class="mt-4" />
-    <Text class="mt-4 block">Click below to send a Change Route Request that should take back to home page.</Text>
+    <Text class="block mt-4">Click below to send a Change Route Request that should take back to home page.</Text>
     <FluentButton Appearance=Appearance.Accent data-qa="ChangeRoute" OnClick=ButtonClick>Change Route to Home</FluentButton>
 
     <hr class="mt-4" />
-    <Text class="mt-4 block">Click below to send a IncrementCountAction via JsInterop.</Text>
+    <Text class="block mt-4">Click below to send a IncrementCountAction via JsInterop.</Text>
 
     <FluentButton Appearance=Appearance.Accent data-qa="JsInterop" OnClick=IncrementCountViaJsInterop >Increment Count by 7 via JavaScript Interop</FluentButton>
   </MainContent>
 </SidebarPage>
 
-@inject IJSRuntime JsRuntime
-@code {
-  private async Task IncrementCountViaJsInterop()
-  {
-    await JsRuntime.InvokeVoidAsync("Spa.Counter.DispatchIncrementCountAction");
-  }
-}
+
