--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/_Imports.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/_Imports.razor
@@ -1,5 +1,6 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Icons = Microsoft.FluentUI.AspNetCore.Components.Icons
+@using TimeWarp.Architecture.Features.Sidebars
 @using Ardalis.GuardClauses
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
