Update interface and component to use Icon? NavIcon instead of RenderFragment

--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Common/Components/TimeWarpNavLink.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Common/Components/TimeWarpNavLink.razor
@@ -3,8 +3,8 @@
 @typeparam TPage where TPage : ITimeWarpPage
 
 <FluentNavLink
-    Href="@TPage.GetPageUrl()"
+    Icon=@TPage.NavIcon
+    Href=@TPage.GetPageUrl()
     Match="NavLinkMatch.All">
-    @TPage.NavigationIconContent
     @TPage.Title
 </FluentNavLink>
