Update TestPage and LeftPane_Main to use TimeWarpNavLink

--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Pages/SitePage/LeftPane_Main.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Pages/SitePage/LeftPane_Main.razor
@@ -13,10 +13,9 @@
     @ChatPage.NavLink
   </FluentNavGroup>
   <FluentNavGroup Title="Developer">
-    @* <TimeWarpNavLink TPage=TestPage> TODO:  *@
     @ExampleTimeWarpPage.NavLink
     @ExampleSitePage.NavLink
-    @TestPage.NavLink
+    <TimeWarpNavLink TPage="TestPage" />
     @EventStreamPage.NavLink
     @ServicesPage.NavLink
     @UserClaimsPage.NavLink
