Move TimeWarpNavLink to Components/Elements with correct namespace

--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Elements/TimeWarpNavLink.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Elements/TimeWarpNavLink.razor
@@ -1,4 +1,4 @@
-@namespace TimeWarp.Architecture.Common.Components
+@namespace TimeWarp.Architecture.Components
 @using TimeWarp.Architecture.Common.Interfaces
 @typeparam TPage where TPage : ITimeWarpPage
 
