--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Debugger/Pages/TestPage.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Debugger/Pages/TestPage.razor
@@ -1,4 +1,4 @@
-﻿﻿@namespace TimeWarp.Architecture.Pages
+﻿@namespace TimeWarp.Architecture.Pages
 @using TimeWarp.Architecture.Features.Sidebars
 @using TimeWarp.Architecture.Common.Interfaces
 @inherits BaseComponent
