Move to using TimeWarpNavLink and the required changes on the Pages.

--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Elements/TimeWarpNavLink.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Elements/TimeWarpNavLink.razor
@@ -1,10 +1,9 @@
 @namespace TimeWarp.Architecture.Components
-@using TimeWarp.Architecture.Common.Interfaces
-@typeparam TPage where TPage : ITimeWarpPage
+@typeparam TPage where TPage : INavigableComponent, IStaticRoute
 
 <FluentNavLink
-    Icon=@TPage.NavIcon
-    Href=@TPage.GetPageUrl()
-    Match="NavLinkMatch.All">
-    @TPage.Title
+  Icon=TPage.NavIcon
+  Href=@TPage.GetPageUrl()
+  Match=NavLinkMatch.All>
+  @TPage.Title
 </FluentNavLink>
