--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Account/Pages/ChangePasswordPage.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Account/Pages/ChangePasswordPage.razor
@@ -1,5 +1,11 @@
 @namespace TimeWarp.Architecture.Pages
+@using Microsoft.FluentUI.AspNetCore.Components.Icons.Filled
 @inherits BaseComponent
+
+@code {
+  public static string Title => "Change Password";
+  public static Icon? NavIcon => new Size20.SettingsCogMultiple();
+}
 
 <StackedPage>
   <HeaderContent>Change Password Page</HeaderContent>
