--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Debugger/Pages/ServicesPage.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Debugger/Pages/ServicesPage.razor
@@ -3,8 +3,7 @@
 
 @code {
   public static string Title => "Services";
-  public static readonly RenderFragment NavLink =
-    @<FluentNavLink Icon=@(new Icons.Regular.Size20.Question()) Href=@GetPageUrl() Match=NavLinkMatch.All>@Title</FluentNavLink>;
+  public static Icon? NavIcon => new Icons.Regular.Size20.Question();
 }
 
 <StackedPage>
