--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Debugger/Pages/TestPage.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Debugger/Pages/TestPage.razor
@@ -1,11 +1,9 @@
 ﻿@namespace TimeWarp.Architecture.Pages
-@using TimeWarp.Architecture.Features.Sidebars
-@using TimeWarp.Architecture.Common.Interfaces
 @inherits BaseComponent
 
 @code {
     public static string Title => "Test";
-    public static Icon? NavIcon => new Icons.Regular.Size20.Question();
+    public static Icon? NavIcon => new Icons.Regular.Size32.Airplane();
 }
 
 <SidebarPage>
