--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Developer/Pages/ExampleSitePage.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Developer/Pages/ExampleSitePage.razor
@@ -3,9 +3,8 @@
 @using TimeWarp.Architecture.Components.Pages.SitePage
 
 @code{
-  private static string Title => "Example SitePage";
-  public static readonly RenderFragment NavLink =
-    @<FluentNavLink Icon=@(new Icons.Regular.Size20.Question()) Href=@GetPageUrl() Match=NavLinkMatch.All>@Title</FluentNavLink>;
+  public static string Title => "Example SitePage";
+  public static Icon? NavIcon => new Icons.Regular.Size20.Question();
 }
 
 <SitePage>
