--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/EventStream/Pages/EventStreamPage.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/EventStream/Pages/EventStreamPage.razor
@@ -4,8 +4,7 @@
 
 @code{
   public static string Title => "Event Stream";
-  public static readonly RenderFragment NavLink =
-    @<FluentNavLink Icon=@(new Icons.Regular.Size20.Question()) Href=@GetPageUrl() Match=NavLinkMatch.All>@Title</FluentNavLink>;
+  public static Icon? NavIcon => new Icons.Regular.Size20.Question();
 }
 
 <PageTitle>Event Stream Page</PageTitle>
