--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Developer/Pages/ExampleTimeWarpPage.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Developer/Pages/ExampleTimeWarpPage.razor
@@ -2,9 +2,8 @@
 @inherits BaseComponent
 
 @code {
-  private static string Title => "Example TimeWarp";
-  public static readonly RenderFragment NavLink =
-    @<FluentNavLink Icon=@(new Icons.Regular.Size20.Question()) Href=@GetPageUrl() Match=NavLinkMatch.All>@Title</FluentNavLink>;
+  public static string Title => "Example TimeWarp";
+  public static Icon? NavIcon => new Icons.Regular.Size20.Question();
 }
 
 <TimeWarpPage ShowPlaceholders=true>
