--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/ToDo/Pages/TodoItemPage.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/ToDo/Pages/TodoItemPage.razor
@@ -1,5 +1,11 @@
 @namespace TimeWarp.Architecture.Pages
 @inherits BaseComponent
+
+@code {
+  public static string Title => "Todo Item";
+  public static Icon? NavIcon => new Icons.Regular.Size20.Question();
+}
+
 <StackedPage>
   <HeaderContent>
     Todo Item @TodoItemId
