--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Pages/ProfilePage.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Pages/ProfilePage.razor
@@ -1,6 +1,11 @@
 @namespace TimeWarp.Architecture.Pages
 @inherits BaseComponent
 
+@code {
+  public static string Title => "Profile";
+  public static Icon? NavIcon => new Icons.Regular.Size20.Question();
+}
+
 <StackedPage>
   <HeaderContent>Profile Page</HeaderContent>
 </StackedPage>
