--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/_Imports.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/_Imports.razor
@@ -15,6 +15,7 @@
 @using Morris.Blazor.Validation
 @using System.Net.Http.Json
 @using System.Security.Principal
+@using TimeWarp.Architecture.Common.Interfaces
 @using TimeWarp.Architecture.Components
 @using TimeWarp.Architecture.Components.Composites.TimeWarpPage
 @using TimeWarp.Architecture.Features
