Task: 003 = Complete Add Authentication Support To TimeWarpNavLink Component and Related Files

--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Elements/TimeWarpNavLink.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Elements/TimeWarpNavLink.razor
@@ -1,9 +1,13 @@
 @namespace TimeWarp.Architecture.Components
 @typeparam TPage where TPage : INavigableComponent, IStaticRoute
 
-<FluentNavLink
-  Icon=TPage.NavIcon
-  Href=@TPage.GetPageUrl()
-  Match=NavLinkMatch.All>
-  @TPage.Title
-</FluentNavLink>
+<AuthorizeView Policy=@TPage.Policy>
+  <Authorized>
+    <FluentNavLink
+      Icon=TPage.NavIcon
+      Href=@TPage.GetPageUrl()
+      Match=NavLinkMatch.All>
+      @TPage.Title
+    </FluentNavLink>
+  </Authorized>
+</AuthorizeView>
