Fix template conditionals for grpc and api parameters
- Add SuperheroGrpcServiceProvider.cs to exclusion list when grpc=false
- Add MockApiService.cs to exclusion list when api=false
- Add conditional compilation directives to PagesSidebarNavSection.razor
- Add conditional compilation directives to LeftPane_Main.razor

These changes ensure that when creating a template with -g false or -ap false,
the relevant files are either excluded or have conditional compilation directives
to prevent compilation errors related to missing types or namespaces.

--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Pages/SitePage/LeftPane_Main.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Pages/SitePage/LeftPane_Main.razor
@@ -8,8 +8,12 @@
   <TimeWarpNavLink TPage=HomePage />
   <FluentNavGroup Title="Pages">
     <TimeWarpNavLink TPage=CounterPage />
+    @*#if (api)*@
     <TimeWarpNavLink TPage=WeatherForecastsPage />
+    @*#endif*@
+    @*#if (grpc)*@
     <TimeWarpNavLink TPage=SuperheroPage />
+    @*#endif*@
     <TimeWarpNavLink TPage=ChatPage />
   </FluentNavGroup>
   <FluentNavGroup Title="Developer">
